@@ -5,6 +5,7 @@
 Version 1.0.2 to be released
 ----------------------------
 - Bug: CDbAuthManager::saveAuthAssignment() causes updating all rows (Qiang)
+- New: Added CActiveRecord::getRelated() (Qiang)
 
 
 Version 1.0.1 January 4, 2009
